--- a/Client/src/app/home/home.component.html
+++ b/Client/src/app/home/home.component.html
@@ -10,3 +10,4 @@
         <li class="list-group-item"><strong>Email : </strong>{{userDetails.email}}</li>
     </ul>
 </div>
+<app-creat-product></app-creat-product>
