--- a/Client/src/app/user/login/login.component.html
+++ b/Client/src/app/user/login/login.component.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="login.component.css">
 <img src="assets/img/single_user.png" class="mx-auto d-block">
 <form #form='ngForm' class="mb-4" autocomplete="off" (submit)="onSubmit(form)">
     <div class="form-group">
