--- a/Client/src/styles.css
+++ b/Client/src/styles.css
@@ -27,6 +27,10 @@ div.form-group label:not(.text-danger) {
     font-weight: 700;
 }
 
+div.form-group {
+    margin: 20px 0px;
+}
+
 div.form-group.required>label:first-child:after {
     content: '*';
     color: #fff;
@@ -97,4 +101,42 @@ div.form-group input.invalid {
 div.form-group label:first-child {
     text-transform: uppercase;
     font-size: 0.9rem;
+    margin-bottom: 5px;
+}
+
+.btn {
+    display: inline-block;
+    margin: 5px 120px;
+    width: 100px;
+    height: 40px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.btn-danger {
+    color: #fff;
+    background-color: #dc3545;
+    border-color: #dc3545;
+}
+
+.text-white {
+    margin-left: 20px;
+}
+
+.d-block {
+    margin-top: 10px;
 }
