--- a/Client/src/app/home/home.component.html
+++ b/Client/src/app/home/home.component.html
@@ -1,13 +1,23 @@
-<nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand text-white">JWT Auth System</a>
-    <button class="btn btn-danger my-2 my-sm-0" (click)="onLogout()">Logout</button>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container px-lg-5">
+        <a class="navbar-brand" href="#!">My Web Demo</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link active" aria-current="page" routerLink="creat-product">Product List</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" routerLink="login" (click)="onLogout()">Logout</a></li>
+            </ul>
+        </div>
+    </div>
 </nav>
 
-<div class="card m-5" style="width:18rem" *ngIf="userDetails">
+
+<!-- <div class="card m-5" style="width:18rem" *ngIf="userDetails">
     <ul class="list-group">
         <li class="list-group-item"><strong>Username : </strong>{{userDetails.userName}}</li>
         <li class="list-group-item"><strong>FullName : </strong>{{userDetails.fullName}}</li>
         <li class="list-group-item"><strong>Email : </strong>{{userDetails.email}}</li>
     </ul>
-</div>
-<app-creat-product></app-creat-product>
+</div> -->
+<router-outlet></router-outlet>
+<app-listproduct></app-listproduct>
