--- a/Client/src/app/home/home.component.html
+++ b/Client/src/app/home/home.component.html
@@ -4,14 +4,15 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" routerLink="creat-product">Product List</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" routerLink="listproduct" routerLinkActive="active">Product List</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" routerLink="creatproduct" routerLinkActive="active">Create List</a></li>
                 <li class="nav-item"><a class="nav-link active" aria-current="page" routerLink="login" (click)="onLogout()">Logout</a></li>
             </ul>
         </div>
     </div>
 </nav>
 
-
+<router-outlet></router-outlet>
 <!-- <div class="card m-5" style="width:18rem" *ngIf="userDetails">
     <ul class="list-group">
         <li class="list-group-item"><strong>Username : </strong>{{userDetails.userName}}</li>
@@ -19,5 +20,3 @@
         <li class="list-group-item"><strong>Email : </strong>{{userDetails.email}}</li>
     </ul>
 </div> -->
-<router-outlet></router-outlet>
-<app-listproduct></app-listproduct>
