--- a/Client/src/app/product/productdetails/productdetails.component.html
+++ b/Client/src/app/product/productdetails/productdetails.component.html
@@ -1,7 +1,7 @@
 <table>
     <tr>
         <td>Id</td>
-        <td>{{product.id}}</td>
+        <td>{{id}}</td>
     </tr>
     <tr>
         <td>Name</td>
@@ -20,3 +20,6 @@
         <td>{{product.isDeleted}}</td>
     </tr>
 </table>
+<a class="btn btn-primary" routerLink="['overview']">Overview</a>
+<a class="btn btn-primary" routerLink="['projects']">Projects</a>
+<a class="btn btn-default" routerLink="['/home/listproduct']" routerLinkActive="active">Go back</a>
