--- a/Client/src/app/product/creatproduct/creatproduct.component.html
+++ b/Client/src/app/product/creatproduct/creatproduct.component.html
@@ -12,12 +12,12 @@
         <input class="form-control" formControlName="Image">
     </div>
     <div class="form-group col-md-8 required">
-        <label>Cost</label>
-        <input class="form-control" formControlName="Cost">
+        <label>UpLoadImage</label>
+        <input type="file" class="form-control" formControlName="UpLoadImage">
     </div>
     <div class="form-group col-md-8 required">
-        <label>IsDeleted</label>
-        <input class="form-control" formControlName="IsDeleted">
+        <label>Cost</label>
+        <input class="form-control" formControlName="Cost">
     </div>
     <div class="form-row">
         <div class="form-group col-md-8 offset-md-4">
