--- a/Client/src/app/product/productdetails/productdetails.component.html
+++ b/Client/src/app/product/productdetails/productdetails.component.html
@@ -9,7 +9,7 @@
     </tr>
     <tr>
         <td>Image</td>
-        <td> <img width="150px" src="{{product.image}}" alt=""></td>
+        <td> <img width="150px" src="https://localhost:5002/{{product.image}}" alt=""></td>
     </tr>
     <tr>
         <td>Cost</td>
