--- a/Client/src/app/home/home.component.html
+++ b/Client/src/app/home/home.component.html
@@ -5,7 +5,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item"><a class="nav-link active" aria-current="page" routerLink="listproduct" routerLinkActive="active">Product List</a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" routerLink="creatproduct" routerLinkActive="active">Create List</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" routerLink="creatproduct" routerLinkActive="active">Create Product</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" routerLink="listimages" routerLinkActive="active">List Image</a></li>
                 <li class="nav-item"><a class="nav-link active" aria-current="page" routerLink="login" (click)="onLogout()">Logout</a></li>
             </ul>
         </div>
